welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbrcookies=0
^Poucet:19: error: ')' expected but '}' found.
	}
        ^Poucet:20: error: 'while' expected but '}' found.
}
^