welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var nbrcookies=0


do {
  
  for(i <- 1 to 5){
    if(estSurBiscuit()){nbrcookies=nbrcookies+1}
  }
  if(nbrcookies<3){droite()}
  else {gauche()}
  

while(!sortieTrouvee
      


